<resources>
    <string name="app_name">TeamnovaPersonalProjectProjecting</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_profile">Profile</string>

    <string name="email_hint">이메일</string>
    <string name="password_hint">패스워드</string>
    <string name="confirm_password_hint">패스워드 확인</string>
    <string name="password_button">패스워드 설정</string>

    <string name="password_checkbox">패스워드 표시</string>

    <string name="login_button_text">로그인</string>

    <string name="test_username">사용자1</string>
    <string name="test_chat_message">사용자 테스트 쳇팅</string>

</resources>